// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query and mutation work should create a draft 1`] = `
Object {
  "createDraft": Object {
    "title": "Title",
  },
}
`;

exports[`Query and mutation work should receive the test draft 1`] = `
Object {
  "title": "Title",
}
`;
